--- a/informed-consumer-app/package.json
+++ b/informed-consumer-app/package.json
@@ -17,9 +17,12 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.21",
     "@types/redux-mock-store": "^1.0.2",
+    "aws-amplify": "^3.3.7",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "font-awesome": "^4.7.0",
     "msw": "^0.21.3",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
